--- a/PlataFormaDePagosWebApp/Views/Home/Index.cshtml
+++ b/PlataFormaDePagosWebApp/Views/Home/Index.cshtml
@@ -1,33 +1,43 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Inicio";
 }
 
 <main>
-    <section class="row" aria-labelledby="aspnetTitle">
-        <h1 id="title">ASP.NET</h1>
-        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-        <p><a href="https://asp.net" class="btn btn-primary btn-md">Learn more &raquo;</a></p>
+    <section class="jumbotron text-center">
+        <h1 class="display-4">SINPE Empresarial</h1>
+        <p class="lead">
+            Plataforma desarrollada para la gestión de pagos electrónicos a través de SINPE.
+            Permite a comercios afiliados validar pagos, administrar sus cajas y visualizar transacciones.
+        </p>
+        <hr class="my-4" />
+        <p>
+            Proyecto académico desarrollado en el curso de Programación Avanzada siguiendo principios de Clean Code, SOLID y arquitectura por capas.
+        </p>
     </section>
 
-    <div class="row">
-        <section class="col-md-4" aria-labelledby="gettingStartedTitle">
-            <h2 id="gettingStartedTitle">Getting started</h2>
-            <p>
-                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-                enables a clean separation of concerns and gives you full control over markup
-                for enjoyable, agile development.
-            </p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="librariesTitle">
-            <h2 id="librariesTitle">Get more libraries</h2>
-            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="hostingTitle">
-            <h2 id="hostingTitle">Web Hosting</h2>
-            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-        </section>
+    <div class="row text-center">
+        <div class="col-md-4">
+            <h2>Módulo de Comercios</h2>
+            <p>Registra, edita y gestiona comercios afiliados a la plataforma.</p>
+            <p>@Html.ActionLink("Ir al módulo", "Index", "COMERCIOs", new { area = "" }, new { @class = "btn btn-primary" })</p>
+        </div>
+        <div class="col-md-4">
+            <h2>Módulo de Cajas</h2>
+            <p>Asocia cajas a los comercios y controla los teléfonos SINPE utilizados.</p>
+            <p>@Html.ActionLink("Ir al módulo", "Index", "CAJAs", new { area = "" }, new { @class = "btn btn-primary" })</p>
+        </div>
+        <div class="col-md-4">
+            <h2>Módulo de SINPE</h2>
+            <p>Registra transacciones electrónicas simuladas hacia los comercios.</p>
+            <p>@Html.ActionLink("Ir al módulo", "Create", "SINPEs", new { area = "" }, new { @class = "btn btn-primary" })</p>
+        </div>
+    </div>
+
+    <div class="row text-center mt-4">
+        <div class="col-md-12">
+            <h2>Bitácora de Eventos</h2>
+            <p>Consulta las acciones realizadas en el sistema con fines de trazabilidad.</p>
+            <p>@Html.ActionLink("Ver Bitácora", "Index", "BITACORAs", new { area = "" }, new { @class = "btn btn-secondary" })</p>
+        </div>
     </div>
 </main>
