--- a/PlataFormaDePagosWebApp/Views/SINPEs/Details.cshtml
+++ b/PlataFormaDePagosWebApp/Views/SINPEs/Details.cshtml
@@ -1,90 +1,47 @@
 ﻿@model PlataFormaDePagosWebApp.SINPE
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalles de la Transferencia SINPE";
+
+    string estado = Model.Estado ? "Sincronizado" : "No sincronizado";
 }
 
-<h2>Details</h2>
+<h2>Detalles de la Transferencia SINPE</h2>
 
 <div>
     <h4>SINPE</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.TelefonoOrigen)
-        </dt>
+        <dt>@Html.DisplayNameFor(model => model.TelefonoOrigen)</dt>
+        <dd>@Html.DisplayFor(model => model.TelefonoOrigen)</dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.TelefonoOrigen)
-        </dd>
+        <dt>@Html.DisplayNameFor(model => model.NombreOrigen)</dt>
+        <dd>@Html.DisplayFor(model => model.NombreOrigen)</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.NombreOrigen)
-        </dt>
+        <dt>@Html.DisplayNameFor(model => model.TelefonoDestinatario)</dt>
+        <dd>@Html.DisplayFor(model => model.TelefonoDestinatario)</dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.NombreOrigen)
-        </dd>
+        <dt>@Html.DisplayNameFor(model => model.NombreDestinatario)</dt>
+        <dd>@Html.DisplayFor(model => model.NombreDestinatario)</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.TelefonoDestinatario)
-        </dt>
+        <dt>@Html.DisplayNameFor(model => model.Monto)</dt>
+        <dd>@Html.DisplayFor(model => model.Monto)</dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.TelefonoDestinatario)
-        </dd>
+        <dt>@Html.DisplayNameFor(model => model.Descripcion)</dt>
+        <dd>@Html.DisplayFor(model => model.Descripcion)</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.NombreDestinatario)
-        </dt>
+        <dt>@Html.DisplayNameFor(model => model.FechaDeRegistro)</dt>
+        <dd>@Model.FechaDeRegistro.ToString("dd/MM/yyyy HH:mm")</dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.NombreDestinatario)
-        </dd>
+        <dt>@Html.DisplayNameFor(model => model.FechaDeModificacion)</dt>
+        <dd>@(Model.FechaDeModificacion?.ToString("dd/MM/yyyy HH:mm") ?? "-")</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Monto)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Monto)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Descripcion)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Descripcion)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.FechaDeRegistro)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FechaDeRegistro)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.FechaDeModificacion)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FechaDeModificacion)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Estado)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Estado)
-        </dd>
-
+        <dt>@Html.DisplayName("Estado")</dt>
+        <dd>@estado</dd>
     </dl>
 </div>
+
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.IdSinpe }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.IdSinpe }, new { @class = "btn btn-warning" }) |
+    @Html.ActionLink("Volver a la lista", "Index", null, new { @class = "btn btn-default" })
 </p>
