--- a/PlataFormaDePagosWebApp/Views/COMERCIOs/Create.cshtml
+++ b/PlataFormaDePagosWebApp/Views/COMERCIOs/Create.cshtml
@@ -1,20 +1,20 @@
 ﻿@model PlataFormaDePagosWebApp.COMERCIO
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Crear Comercio";
 }
 
-<h2>Create</h2>
+<h2>Crear Comercio</h2>
 
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>COMERCIO</h4>
+        <h4>Datos del Comercio</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
         <div class="form-group">
             @Html.LabelFor(model => model.Identificacion, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -24,9 +24,12 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TipoIdentificacion, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Tipo de Identificación", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TipoIdentificacion, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.TipoIdentificacion, new SelectList(new[] {
+                    new { Value = "1", Text = "Física" },
+                    new { Value = "2", Text = "Jurídica" }
+                }, "Value", "Text"), "Seleccione un tipo", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.TipoIdentificacion, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -40,9 +43,14 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TipoDeComercio, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Tipo de Comercio", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TipoDeComercio, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.TipoDeComercio, new SelectList(new[] {
+                    new { Value = "1", Text = "Restaurantes" },
+                    new { Value = "2", Text = "Supermercados" },
+                    new { Value = "3", Text = "Ferreterías" },
+                    new { Value = "4", Text = "Otros" }
+                }, "Value", "Text"), "Seleccione un tipo", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.TipoDeComercio, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -66,48 +74,24 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Direccion, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Direccion, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Direccion, new { @class = "form-control", rows = 3 })
                 @Html.ValidationMessageFor(model => model.Direccion, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.FechaDeRegistro, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.FechaDeRegistro, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.FechaDeRegistro, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.FechaDeModificacion, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.FechaDeModificacion, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.FechaDeModificacion, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Estado, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Estado)
-                    @Html.ValidationMessageFor(model => model.Estado, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
+        <!-- Campos ocultos por lógica interna -->
+        @Html.HiddenFor(model => model.FechaDeRegistro)
+        @Html.HiddenFor(model => model.FechaDeModificacion)
+        @Html.HiddenFor(model => model.Estado)
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
+                @Html.ActionLink("Volver a la lista", "Index", null, new { @class = "btn btn-default" })
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
