--- a/PlataFormaDePagosWebApp/Views/COMERCIOs/Edit.cshtml
+++ b/PlataFormaDePagosWebApp/Views/COMERCIOs/Edit.cshtml
@@ -1,37 +1,20 @@
 ﻿@model PlataFormaDePagosWebApp.COMERCIO
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar Comercio";
 }
 
-<h2>Edit</h2>
-
+<h2>Editar Comercio</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>COMERCIO</h4>
+        <h4>Datos del Comercio</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.IdComercio)
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Identificacion, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Identificacion, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Identificacion, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.TipoIdentificacion, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TipoIdentificacion, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TipoIdentificacion, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -42,9 +25,14 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TipoDeComercio, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Tipo de Comercio", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TipoDeComercio, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.TipoDeComercio, new SelectList(new[] {
+                    new { Value = "1", Text = "Restaurantes" },
+                    new { Value = "2", Text = "Supermercados" },
+                    new { Value = "3", Text = "Ferreterías" },
+                    new { Value = "4", Text = "Otros" }
+                }, "Value", "Text", Model.TipoDeComercio), "Seleccione un tipo", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.TipoDeComercio, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -68,24 +56,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Direccion, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Direccion, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Direccion, new { @class = "form-control", rows = 3 })
                 @Html.ValidationMessageFor(model => model.Direccion, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.FechaDeRegistro, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.FechaDeRegistro, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.FechaDeRegistro, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.FechaDeModificacion, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.FechaDeModificacion, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.FechaDeModificacion, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -99,17 +71,20 @@
             </div>
         </div>
 
+        <!-- Campos ocultos para evitar errores de binding -->
+        @Html.HiddenFor(model => model.Identificacion)
+        @Html.HiddenFor(model => model.TipoIdentificacion)
+        @Html.HiddenFor(model => model.FechaDeRegistro)
+        @Html.HiddenFor(model => model.FechaDeModificacion)
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
+                @Html.ActionLink("Volver a la lista", "Index", null, new { @class = "btn btn-default" })
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
