--- a/PlataFormaDePagosWebApp/Views/Shared/_Layout.cshtml
+++ b/PlataFormaDePagosWebApp/Views/Shared/_Layout.cshtml
@@ -3,14 +3,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>
+        @ViewBag.Title - SINPE Empresarial
+    </title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
         <div class="container">
-            @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("SINPE Empresarial", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -21,7 +23,7 @@
                     <li>@Html.ActionLink("Manejo de Comercios", "Index", "COMERCIOs", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Manejo de Cajas", "Index", "CAJAs", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Manejo de Sinpes", "Index", "SINPEs", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Bitácora de Eventos", "Index", "BITACORAs", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
         </div>
@@ -30,7 +32,9 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>
+                &copy; @DateTime.Now.Year - SINPE Empresarial
+            </p>
         </footer>
     </div>
 
