--- a/PlataFormaDePagosWebApp/Views/Shared/_Layout.cshtml
+++ b/PlataFormaDePagosWebApp/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("Manejo de Comercios", "Index", "COMERCIOs", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Manejo de Cajas", "Index", "CAJAs", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Manejo de Sinpes", "Index", "SINPEs", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Manejo de Configuraciones", "Index", "CONFIGURACION_DE_COMERCIO", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Bitácora de Eventos", "Index", "BITACORAs", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
