--- a/PlataFormaDePagosWebApp/Views/CONFIGURACION_DE_COMERCIO/Edit.cshtml
+++ b/PlataFormaDePagosWebApp/Views/CONFIGURACION_DE_COMERCIO/Edit.cshtml
@@ -1,52 +1,34 @@
 ﻿@model PlataFormaDePagosWebApp.CONFIGURACION_DE_COMERCIO
-
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar Configuración";
 }
-
-<h2>Edit</h2>
-
+<h2>Editar Configuración</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
     <div class="form-horizontal">
-        <h4>CONFIGURACION_DE_COMERCIO</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.idConfiguracion)
-
+        @Html.HiddenFor(model => model.IdComercio)
         <div class="form-group">
-            @Html.LabelFor(model => model.IdComercio, "IdComercio", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("IdComercio", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.IdComercio, "", new { @class = "text-danger" })
-            </div>
+            <label>Comercio</label>
+            <input class="form-control" readonly value="@Model.COMERCIO?.Nombre" />
         </div>
-
-        @Html.HiddenFor(model => model.TipoConfiguracion)
-
-        @Html.HiddenFor(model => model.Comision)
-
-        @Html.HiddenFor(model => model.FechaDeRegistro)
-
-        @Html.HiddenFor(model => model.FechaDeModificacion)
-
-        @Html.HiddenFor(model => model.Estado)
-
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
+            @Html.LabelFor(model => model.TipoConfiguracion)
+            @Html.DropDownListFor(model => model.TipoConfiguracion, new SelectList(new[]{
+                new {Value=1, Text="Plataforma"},
+                new {Value=2, Text="Externa"},
+                new {Value=3, Text="Ambas"}}, "Value", "Text", Model.TipoConfiguracion), "Seleccione", new { @class = "form-control" })
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Comision)
+            @Html.EditorFor(model => model.Comision, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Estado)
+            @Html.CheckBoxFor(model => model.Estado)
+        </div>
+        <input type="submit" value="Guardar Cambios" class="btn btn-success" />
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
 }
